--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "react-scripts": "2.1.5"
   },
   "scripts": {
-    "start": "node src/App.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
+    "test": "react-scripts tests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
